--- a/confetti-cuisine/views/error.ejs
+++ b/confetti-cuisine/views/error.ejs
@@ -4,7 +4,7 @@
   </div>
   <div class="col-sm-6">
     <h1>
-      Oops! Something went wrong, or the pahe you are lookinf dor is not
+      Oops! Something went wrong, or the page you are looking for is not
       available.
     </h1>
     <p>
