--- a/confetti-cuisine/views/contact.ejs
+++ b/confetti-cuisine/views/contact.ejs
@@ -5,7 +5,7 @@
   <div class="col-sm-6">
     <h1>Reach out to us</h1>
     <p>Enter your email if you're interested to learn more:</p>
-    <form action="/contact" method="post">
+    <form action="/contact" method="POST">
       <label for="name">Name</label>
       <input type="text" name="name" value="" />
       <br />
@@ -22,7 +22,7 @@
       <br />
       <label for="streetAddress">Street Address</label>
       <input type="text" name="streetAddress" placeholder="Street Address" />
-      <input type="button" type="submit" value="submit" />
+      <button type="submit">Submit</button>
     </form>
     <p>We'll get back to you soon</p>
   </div>
